--- a/package.json
+++ b/package.json
@@ -6,14 +6,25 @@
   "main": "index.js",
   "scripts": {
     "build": "turbo build",
-    "biome:check": "biome check ./**/**",
-    "biome:format": "biome format --write ./**/**",
-    "biome:lint": "biome lint --apply ./**/**",
-    "biome:unsafe-fix": "biome check --fix --unsafe",
+    "biome:format": "biome format --write .",
+    "biome:unsafe-fix": "biome check --fix --unsafe .",
     "knip": "knip",
     "tsc": "pnpm -r exec tsc --noEmit",
     "generate-openapi": "pnpm --filter @vspo-lab/api generate-openapi",
-    "dev:vspo-schedule-web": "pnpm --filter vspo-schedule-v2-web dev"
+    "dev:vspo-schedule-web": "pnpm --filter vspo-schedule-v2-web dev",
+    "tools:generate-config:dev": "turbo run tools:generate-config:dev",
+    "tools:generate-config:prd": "turbo run tools:generate-config:prd",
+    "tools:generate-config:dev:server": "turbo run tools:generate-config:dev --filter=vspo-portal-server",
+    "tools:generate-config:prd:server": "turbo run tools:generate-config:prd --filter=vspo-portal-server",
+    "tools:generate-config:dev:web": "turbo run tools:generate-config:dev --filter=vspo-schedule-v2-web",
+    "tools:generate-config:prd:web": "turbo run tools:generate-config:prd --filter=vspo-schedule-v2-web",
+    "build:dryrun": "turbo run build:dryrun --concurrency=10",
+    "build:dryrun:server": "turbo run build:dryrun --filter=vspo-portal-server",
+    "build:dryrun:web": "turbo run build:dryrun --filter=vspo-schedule-v2-web",
+    "typecheck": "turbo run typecheck",
+    "lint:biome": "biome check .",
+    "ci": "pnpm typecheck && pnpm lint:biome && turbo run build:dryrun",
+    "pre-commit": "pnpm biome:unsafe-fix && pnpm biome:format"
   },
   "author": "sugar-cat7",
   "license": "MIT",
