--- a/service/server/package.json
+++ b/service/server/package.json
@@ -9,33 +9,28 @@
     "dev:cron": "wrangler dev --test-scheduled --config config/wrangler/dev/vspo-portal-cron/wrangler.jsonc --script cmd/cron/index.ts",
     "deploy:all": "nx run vspo-portal-server:deploy-all",
     "deploy": "wrangler deploy",
-    "build:dryrun": "nx run vspo-portal-server:build-dryrun",
     "db:up": "docker compose -f docker/compose.yaml up",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio --port=3004",
     "db:generate:empty": "drizzle-kit generate --custom",
     "tsc": "tsc --noEmit",
-    "ci": "nx run vspo-portal-server:ci",
     "test": "vitest --mode test",
     "register:local": "node --env-file=.env.local cmd/discord/interaction/register.ts",
     "register:prd": "node --env-file=.env.prd cmd/discord/interaction/register.ts",
     "tools:build": "tsup tools/**/*.ts",
     "tools:generate-locales": "pnpm tools:build && node --env-file=.env.local dist/generate-locales.cjs",
     "tools:generate-openapi": "node tools/openapi/generate-spec.ts",
-    "tools:generate-workflow-configs": "tsup tools/wrangler/generate-workflow-configs.ts --format esm && node dist/generate-workflow-configs.js",
-    "tools:convert-toml-to-jsonc": "tsup tools/wrangler/convert-toml-to-jsonc.ts --format cjs && node dist/convert-toml-to-jsonc.cjs",
-    "tools:generate-all-configs": "tsup tools/wrangler/generate-all-configs.ts --format cjs && node dist/generate-all-configs.cjs",
-    "tools:generate-all-configs:dev": "tsup tools/wrangler/generate-all-configs.ts --format cjs && node dist/generate-all-configs.cjs dev",
-    "tools:generate-all-configs:prd": "tsup tools/wrangler/generate-all-configs.ts --format cjs && node dist/generate-all-configs.cjs prd",
-    "tools:generate-worker-types": "tsup tools/generate-worker-types.ts --format cjs && node dist/generate-worker-types.cjs",
-    "tools:generate-nx-config": "tsup tools/generate-nx-config.ts --format cjs && node dist/generate-nx-config.cjs",
-    "tools:update-all-configs": "tsup tools/update-all-worker-configs.ts --format cjs && node dist/update-all-worker-configs.cjs",
-    "tools:generate-service-configs:dev": "tsup tools/wrangler/generate-service-configs.ts --format cjs && node dist/generate-service-configs.cjs dev",
-    "tools:generate-service-configs:prd": "tsup tools/wrangler/generate-service-configs.ts --format cjs && node dist/generate-service-configs.cjs prd",
-    "tools:generate-all-worker-configs": "tsup tools/wrangler/generate-all-worker-configs.ts --format cjs && node dist/generate-all-worker-configs.cjs",
-    "tools:generate-all-worker-configs:dev": "tsup tools/wrangler/generate-all-worker-configs.ts --format cjs && node dist/generate-all-worker-configs.cjs dev",
-    "tools:generate-all-worker-configs:prd": "tsup tools/wrangler/generate-all-worker-configs.ts --format cjs && node dist/generate-all-worker-configs.cjs prd"
+    "tools:generate-all-configs:dev": "node tools/wrangler/generate-all-configs.ts dev",
+    "tools:generate-all-configs:prd": "node tools/wrangler/generate-all-configs.ts prd",
+    "tools:generate-service-configs:dev": "node tools/wrangler/generate-service-configs.ts dev",
+    "tools:generate-service-configs:prd": "node tools/wrangler/generate-service-configs.ts prd",
+    "tools:generate-all-worker-configs:dev": "node tools/wrangler/generate-all-worker-configs.ts dev",
+    "tools:generate-all-worker-configs:prd": "node tools/wrangler/generate-all-worker-configs.ts prd",
+    "tools:generate-config:dev": "pnpm tools:generate-all-worker-configs:dev && pnpm tools:generate-service-configs:dev",
+    "tools:generate-config:prd": "pnpm tools:generate-all-worker-configs:prd && pnpm tools:generate-service-configs:prd",
+    "build:dryrun": "echo '🔍 Performing dry-run for all vspo-portal-server workers...' && bash scripts/dry-run-all-workers.sh",
+    "build:dryrun:all": "bash scripts/dry-run-all-workers.sh"
   },
   "dependencies": {
     "@discordeno/rest": "^21.0.0",
@@ -80,7 +75,6 @@
     "@types/pg": "^8.11.14",
     "drizzle-kit": "^0.31.0",
     "magicast": "^0.3.5",
-    "nx": "20.8.1",
     "ts-morph": "^24.0.0",
     "tsup": "catalog:",
     "typescript": "catalog:",
