--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,7 +6,7 @@ catalog:
   '@cloudflare/workers-types': ^4.20250927.0
   '@types/node': ^22.15.24
   dayjs: ^1.11.18
-  next: ^15.4.7
+  next: 15.4.8
   react: ^19.0.0
   react-dom: ^19.0.0
   tsup: ^8.5.0
